ingress-tautulli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
  - host: stats.farhoodliquor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  tautulli
            port:
              number: 8181
  tls:
  - hosts:
    - stats.farhoodliquor.com
    secretName: farhoodliquor-com-cert-letsencrypt-prod
